Fixed: text overflow issue for data cells. Added: loading img to the distribution assembly

--- a/src/CrystalQuartz.Application.Client/app/common.less
+++ b/src/CrystalQuartz.Application.Client/app/common.less
@@ -50,6 +50,8 @@ body,
     padding: 0 10px;
     line-height: 20px;
     text-align: left;
+    text-overflow: ellipsis;
+    overflow: hidden;
 }
 
 .data-header-item:last-child,
